# freesound-python

./: .gitignore  COPYING.txt  README.md  Readme.md  download_bookmarks_example.py  essentia_example.py  examples.py  examples_py3.py  freesound.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  python-smoke-test.yml  yapf.yml
doc/: .buildinfo  genindex.html  index.html  oauthInstructionSummary.md  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_modules/: freesound.html  index.html  io.html
doc/_sources/: index.txt
freesound/: __init__.py
