[project]
name = "freesound"
version = "1.1"
description = "A Python client for the Freesound APIv2"
readme = "Readme.md"
requires-python = ">=3.7"
license = {file = "COPYING.txt"}
dependencies = [
    "requests>=2.27,<3.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.urls]
Homepage = "https://github.com/MTG/freesound-python"
Repository = "https://github.com/MTG/freesound-python.git"


[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["freesound.py"]

[tool.yapf]
based_on_style = "google"
spaces_before_comment = 4
split_before_logical_operator = true
split_before_expression_after_opening_paren = true
split_before_first_argument = true
dedent_closing_brackets = true
coalesce_brackets = true
column_limit = 120
align_closing_bracket_with_visual_indent = true
